--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            height: 100vh;
         }
 
         .wheels-container {
             display: flex;
             justify-content: center;
-            margin-top: 20px;
+            align-items: center;
         }
 
         .wheel {
@@ -141,17 +142,17 @@
         <button id="customizeButton" class="top-right">Personnaliser</button>
         <div class="wheels-container">
             <div class="wheel">
-                <canvas id="wheelCanvas1" width="500" height="500"></canvas>
+                <canvas id="wheelCanvas1" width="300" height="300"></canvas>
                 <button id="spinButton1">Tourner</button>
                 <div id="result1">Résultat: ?</div>
             </div>
             <div class="wheel">
-                <canvas id="wheelCanvas2" width="500" height="500"></canvas>
+                <canvas id="wheelCanvas2" width="300" height="300"></canvas>
                 <button id="spinButton2">Tourner</button>
                 <div id="result2">Résultat: ?</div>
             </div>
             <div class="wheel">
-                <canvas id="wheelCanvas3" width="500" height="500"></canvas>
+                <canvas id="wheelCanvas3" width="300" height="300"></canvas>
                 <button id="spinButton3">Tourner</button>
                 <div id="result3">Résultat: ?</div>
             </div>
@@ -200,6 +201,7 @@
     <script>
         let lastMouseMoveTime = Date.now();
 
+        // Vérification d'inactivité
         function checkMouseInactive() {
             const currentTime = Date.now();
             if (currentTime - lastMouseMoveTime > 30000) {
@@ -211,7 +213,7 @@
         document.body.addEventListener("mousemove", () => {
             lastMouseMoveTime = Date.now();
             document.getElementById("videoContainer").style.display = "none";
-            document.querySelector(".container").style.display = "block";
+            document.querySelector(".container").style.display = "flex";
         });
 
         setInterval(checkMouseInactive, 100);
@@ -223,6 +225,36 @@
         document.getElementById("saveButton").addEventListener("click", () => {
             document.getElementById("popup").style.display = "none";
         });
+
+        // Dessiner les roues
+        function drawWheel(canvasId, colors, gifts) {
+            const canvas = document.getElementById(canvasId);
+            const ctx = canvas.getContext("2d");
+            const segments = gifts.length;
+            const arc = (2 * Math.PI) / segments;
+
+            gifts.forEach((gift, i) => {
+                const angle = i * arc;
+                ctx.beginPath();
+                ctx.fillStyle = colors[i % colors.length];
+                ctx.moveTo(150, 150);
+                ctx.arc(150, 150, 150, angle, angle + arc);
+                ctx.fill();
+
+                ctx.save();
+                ctx.translate(150, 150);
+                ctx.rotate(angle + arc / 2);
+                ctx.fillStyle = "black";
+                ctx.textAlign = "center";
+                ctx.font = "14px Arial";
+                ctx.fillText(gift, 100, 10);
+                ctx.restore();
+            });
+        }
+
+        drawWheel("wheelCanvas1", ["#ff9999", "#66b3ff"], ["Cadeau 1", "Cadeau 2", "Cadeau 3", "Cadeau 4", "Cadeau 5", "Cadeau 6"]);
+        drawWheel("wheelCanvas2", ["#ff9999", "#66b3ff"], ["Cadeau 1", "Cadeau 2", "Cadeau 3", "Cadeau 4", "Cadeau 5", "Cadeau 6"]);
+        drawWheel("wheelCanvas3", ["#ff9999", "#66b3ff"], ["Cadeau 1", "Cadeau 2", "Cadeau 3", "Cadeau 4", "Cadeau 5", "Cadeau 6"]);
     </script>
 </body>
 </html>
