--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         canvas {
             border: 2px solid #000;
-            border-radius: 10px;
+            border-radius: 50%;
         }
 
         button {
@@ -52,14 +52,15 @@
             color: white;
         }
 
+        /* Nouveau design pour les cadres de résultats */
         #result1, #result2, #result3 {
             margin-top: 10px;
             font-size: 18px;
             font-weight: bold;
             padding: 10px;
-            border: 2px solid #000;
-            border-radius: 5px;
-            background-color: #ffeb3b;
+            border: 2px solid #4CAF50; /* Cadre vert */
+            border-radius: 10px; /* Coins arrondis */
+            background-color: #f1f8e9; /* Fond vert clair */
             width: 200px;
             margin-left: auto;
             margin-right: auto;
@@ -200,12 +201,8 @@
 
     <script>
         let lastMouseMoveTime = Date.now();
-        const wheels = [
-            { canvasId: "wheelCanvas1", spinButtonId: "spinButton1", resultId: "result1", gifts: ["Cadeau 1", "Cadeau 2", "Cadeau 3", "Cadeau 4", "Cadeau 5", "Cadeau 6"] },
-            { canvasId: "wheelCanvas2", spinButtonId: "spinButton2", resultId: "result2", gifts: ["Cadeau 1", "Cadeau 2", "Cadeau 3", "Cadeau 4", "Cadeau 5", "Cadeau 6"] },
-            { canvasId: "wheelCanvas3", spinButtonId: "spinButton3", resultId: "result3", gifts: ["Cadeau 1", "Cadeau 2", "Cadeau 3", "Cadeau 4", "Cadeau 5", "Cadeau 6"] }
-        ];
 
+        // Vérification d'inactivité
         function checkMouseInactive() {
             const currentTime = Date.now();
             if (currentTime - lastMouseMoveTime > 30000) {
@@ -252,7 +249,7 @@
                 document.getElementById("gift6_3").value
             ];
 
-            wheels.forEach(wheel => drawWheel(wheel.canvasId, ["#ff9999", "#66b3ff"], wheel.gifts));
+            wheels.forEach(wheel => drawWheel(wheel.canvasId, ["#ff7f7f", "#7fffd4"], wheel.gifts)); // Modif couleur des segments
             document.getElementById("popup").style.display = "none";
         });
 
@@ -264,6 +261,7 @@
 
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+            // Dessin des segments
             gifts.forEach((gift, i) => {
                 const angle = i * arc;
                 ctx.beginPath();
@@ -281,6 +279,12 @@
                 ctx.fillText(gift, 100, 10);
                 ctx.restore();
             });
+
+            // Dessin du centre blanc
+            ctx.beginPath();
+            ctx.arc(150, 150, 30, 0, 2 * Math.PI);
+            ctx.fillStyle = "#ffffff";
+            ctx.fill();
         }
 
         function spinWheel(wheel) {
@@ -293,7 +297,7 @@
 
             const interval = setInterval(() => {
                 angle += 20 * Math.PI / 180;
-                drawWheel(wheel.canvasId, ["#ff9999", "#66b3ff"], gifts);
+                drawWheel(wheel.canvasId, ["#ff7f7f", "#7fffd4"], gifts);
                 ctx.translate(150, 150);
                 ctx.rotate(angle);
                 ctx.translate(-150, -150);
@@ -307,9 +311,10 @@
         }
 
         wheels.forEach(wheel => {
-            drawWheel(wheel.canvasId, ["#ff9999", "#66b3ff"], wheel.gifts);
+            drawWheel(wheel.canvasId, ["#ff7f7f", "#7fffd4"], wheel.gifts);
             document.getElementById(wheel.spinButtonId).addEventListener("click", () => spinWheel(wheel));
         });
     </script>
 </body>
 </html>
+
